# dot

./: .gitignore  .gitmodules  .stow-local-ignore  README.md
config/.config/alacritty/: alacritty.toml
config/.config/albert/: config
config/.config/dunst/: dunstrc
config/.config/dwm/: autostart.sh
config/.config/nvim/: init.lua
home/: .colors  .completions  .functions  .rc  .tmux.conf  .zshrc  common.sh  pkg.json  pkg.schema.json
home/.config/alacritty/: alacritty.toml
home/.config/albert/: config
home/.config/dunst/: dunstrc
home/.config/dwm/: autostart.sh
home/.config/gsimplecal/: config
home/.config/picom/: picom.conf
home/.config/tmux/: tmux.conf
home/.dwm/: autostart.sh
home/.local/scripts/: get_agent_usage  get_battery  get_ccusage  get_date  get_network_speed  get_uptime  get_volume  to_pdf
home/.local/share/pack/: pkg.json
home/scripts/: get_battery  get_curr_song  get_date  get_emoji  get_network_speed  handle_monitor_hotplug  hotrandr  last_played_song  pack  reload_keys  screenshot  update_nvim  update_pkg
home/suckless/dwm/: .gitignore  Makefile  config.h  dwm.c  layouts.inc  meson.build
home/suckless/slstatus/: Makefile  config.def.h  slstatus  slstatus.c
local/.local/pack/: pkg.json
local/.local/scripts/: handle_monitor_hotplug
src/: .stow-local-ignore
src/displayd/: Makefile  README.md  pyproject.toml
src/displayd/src/displayd/: __init__.py  app.py  applier.py  cooldown.py  ctl.py  engine.py  events.py  log.py  policy.py  topology.py  types.py
src/displayd/src/displayd/agent/: __main__.py  applier.py
src/displayd/src/displayd/backends/: __init__.py  base.py  xrandr.py
src/displayd/src/displayd/daemon/: __main__.py  drm.py  lid.py  logind.py  service.py
src/displayd/src/displayd/ui/: __init__.py  editor.py  geometry.py  icon.py  tray.py
src/displayd/src/displayd/watchers/: __init__.py  drm.py  logind.py  upower.py
src/displayd/systemd/: displayd-watcher.service  displayd.service
src/displayd/tests/: test_engine.py  test_events.py  test_geometry.py  test_policy.py  test_reconciliation.py  test_stale_cleanup.py  test_topology.py  test_xrandr_args.py
src/dwm/: Makefile  config.h  drw.h  dwm.c
src/slstatus/: .gitignore  Makefile  config.h
suckless/: .stow-local-ignore
suckless/.dwm/: autostart.sh
suckless/dwm/: Makefile  config.h  drw.c  dwm.c  dwm.sh
(+15 files in other folders)
