[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "displayd"
version = "0.1.0"
description = "Linux monitor display-management event service"
requires-python = ">=3.11"
dependencies = [
    "dbus-fast>=2.0",
    "pyudev>=0.24",
    "PyGObject>=3.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
displayd = "displayd.app:main"
displayd-ctl = "displayd.ctl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
